# protogen

./: README.md
doc/: cgpdoc.txt  defdoc.txt  tmpldoc.txt
example/: enum.tmpl  example.cgp  message.tmpl  messages.def  protocol.def  types.def
example-cmake/: CMakeLists.txt  example.cgp  gen_test.cpp  message.tmpl  msg.def
example-cmake/protogen/: CMakeLists.txt
example/tmpl/: message.tmpl  protocol.tmpl
src/: CMakeLists.txt  DataSource.hpp  Exceptions.hpp  FileReader.hpp  Format.cpp  Parser.cpp  Parser.hpp  Project.cpp  Project.hpp  Template.cpp  Template.hpp  TemplateDataSource.cpp  TemplateDataSource.hpp  Utility.cpp  Utility.hpp  protogen.cpp
src/kst/: Throw.hpp
src/kst/CVS/: Entries  Repository  Root
